--- a/style.css
+++ b/style.css
@@ -46,12 +46,12 @@ section nav ul li a:hover {
     height: 120px;
      margin-bottom:10px;
 }
-div p1{
+div .p1{
     font-size: 30px;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
 }
-div p2{
+div .p2{
     font-size: 18px;
     font-family: font-family: 'Poppins', sans-serif;
     opacity: 60%;
