--- a/style.css
+++ b/style.css
@@ -271,7 +271,7 @@ span{
      padding:0px 3%;   
     
 }
-.b span1{
+.b .1{
     font-size: 13px;
     opacity: 60%;
 }
@@ -287,7 +287,7 @@ span{
      padding:0px 3%;   
     
 }
-.c span1{
+.c .1{
     font-size: 13px;
     opacity: 60%;
 }
