--- a/style.css
+++ b/style.css
@@ -247,7 +247,7 @@ div.container-right{
      padding:0px 3%;   
     
 }
-.1{
+.one{
     font-size: 13px;
     opacity: 60%;
 }
@@ -271,7 +271,7 @@ span{
      padding:0px 3%;   
     
 }
-.b .1{
+.b .one{
     font-size: 13px;
     opacity: 60%;
 }
@@ -287,7 +287,7 @@ span{
      padding:0px 3%;   
     
 }
-.c .1{
+.c .one{
     font-size: 13px;
     opacity: 60%;
 }
@@ -335,7 +335,7 @@ span{
      padding:0px 3%;   
     
 }
-.fspan1{
+.f .one{
     font-size: 13px;
     opacity: 60%;
 }
